; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osThreadCheckCancel.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osThreadCheckCancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i32 }

@SCE_KERNEL_ERROR_OK = common dso_local global i64 0, align 8
@PTE_OS_INTERRUPTED = common dso_local global i32 0, align 4
@PTE_OS_OK = common dso_local global i32 0, align 4
@PTE_OS_GENERAL_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pte_osThreadCheckCancel(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call %struct.TYPE_5__* @getThreadData(i32 %7)
  store %struct.TYPE_5__* %8, %struct.TYPE_5__** %6, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %10 = icmp ne %struct.TYPE_5__* %9, null
  br i1 %10, label %11, label %31

11:                                               ; preds = %1
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @sceKernelReferSemaStatus(i32 %14, %struct.TYPE_6__* %3)
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @SCE_KERNEL_ERROR_OK, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %11
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i32, i32* @PTE_OS_INTERRUPTED, align 4
  store i32 %24, i32* %5, align 4
  br label %27

25:                                               ; preds = %19
  %26 = load i32, i32* @PTE_OS_OK, align 4
  store i32 %26, i32* %5, align 4
  br label %27

27:                                               ; preds = %25, %23
  br label %30

28:                                               ; preds = %11
  %29 = load i32, i32* @PTE_OS_GENERAL_FAILURE, align 4
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %28, %27
  br label %33

31:                                               ; preds = %1
  %32 = load i32, i32* @PTE_OS_GENERAL_FAILURE, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %31, %30
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local %struct.TYPE_5__* @getThreadData(i32) #1

declare dso_local i64 @sceKernelReferSemaStatus(i32, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
